<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/fond"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="35dp"
        android:text="@string/app_name"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_connecter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_connecter"/>

        <Button
            android:id="@+id/btn_apropos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_apropos"/>

    </LinearLayout>

</RelativeLayout>