<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/fond" />

    <LinearLayout
        android:id="@+id/linearLayoutMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_menu_scenario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/menu_item1"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_menu_joystick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/menu_item2"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_menu_apropos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/menu_item3"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_menu_quitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/menu_item4"
            android:textColor="#FFFFFF" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_above="@id/linearLayoutMenu">

        <LinearLayout
            android:id="@+id/layoutFonction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#4C000000"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/scenario_fonction"/>

                <ImageView
                    android:id="@+id/img_qrcode"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/qrcode"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#000000"
                android:text="@string/scenario_titre"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:minHeight="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#4C000000"
                android:gravity="center">

                <ListView
                    android:id="@+id/listViewScenario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_envoyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Envoyer"
                android:background="@drawable/button_style"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
